# isitmaintained

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE.md  README.md  config.yml  config_schema.py  noxfile.py  pyproject.toml
.github/workflows/: copilot-instructions.md
inputs/: Pytest-Plugins_2024.xlsx
isitmaintained/: __init__.py  __main__.py  config_reader.py  excel_utils.py  logging_utils.py  main.py  scraper.py
outputs/: pytest_plugins.csv
tests/: __init__.py  test_config_reader.py  test_excel_utils.py  test_logging_utils.py
tests/integration/: test_main.py
